--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "custom-react-scripts": "0.2.0",
     "hanzi-writer": "^0.2.0",
+    "radium": "^0.19.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.12",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
